# photon

./: .gitignore  Cargo.toml  LICENSE  README.md  REF.md  TODO.md  fields.csv  fields.json  payloads.json  steps.csv
payload/: check_database.json  download_video.json  get_video_data.json
src/: TODO.md  client.rs  convert.rs  main.rs
src/bitrate/: mod.rs
src/convert/: mod.rs  schema.rs
src/error/: mod.rs
src/youtube_url/: mod.rs
