[package]
name = "y2mp3"
version = "0.1.0"
edition = "2021"

[dependencies]
infer = "0.16.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.216", features = ["std", "derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
