[package]
name = "photon"
version = "1.5.0-alpha"
edition = "2021"
description = "Frontend to downloading music from cnvmp3.com"
license = "MIT"
repository = "https://github.com/estoneman/photon"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "cargo"] }
infer = "0.16.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.216", features = ["std", "derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
url = { version = "2.5.4", features = ["serde", "std"] }
urlencoding = "2.1.3"
